# tutor-stack-auth

./: .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
tests/: conftest.py  test_auth.py
tutor_stack_auth/: __init__.py  auth.py  database.py  main.py  models.py  schemas.py
