[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tutor-stack-auth"
version = "0.1.0"
description = "Authentication service for the Tutor Stack platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ahmed Sarhan", email = "ahmed.sarhan@example.com" }
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "fastapi-users[sqlalchemy,oauth]==13.0.0",
    "httpx-oauth>=0.16.1",
    "python-jose[cryptography]>=3.5.0",
    "asyncpg==0.29.0",
    "aiosqlite==0.19.0",
    "sqlalchemy[asyncio]==2.0.27",
    "alembic==1.13.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.27.0",
    "pytest-cov==4.1.0",
    "black==24.2.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0"
]

[tool.hatch.build.targets.wheel]
packages = ["tutor_stack_auth"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=tutor_stack_auth --cov-report=term-missing"
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.*"
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    ".mypy_cache",
    "__pycache__"
]

[tool.coverage.run]
source = ["tutor_stack_auth"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

